--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
+aioredis==2.0.1
 annotated-types==0.6.0
 anyio==3.7.1
+async-timeout==4.0.3
 certifi==2023.7.22
 click==8.1.7
+dnspython==2.4.2
 exceptiongroup==1.1.3
 fastapi==0.104.1
 h11==0.14.0
 httpcore==1.0.1
 httpx==0.25.1
 idna==3.4
+motor==3.3.1
 pydantic==2.4.2
 pydantic-settings==2.0.3
 pydantic_core==2.10.1
+PyJWT==2.8.0
+pymongo==4.6.0
 python-dotenv==1.0.0
+pytz==2023.3.post1
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.8.0
